--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
 
-  <body>
-    <header>
+  <header>
+    <a href="/">
+      <img src="/public/uploads/logo_hiking_guide_white 1.png" alt="Logo" class="logo" />
+    </a>
+    <nav>
       <a href="/">Home</a>
-    </header>
+      <a href="/gallery">Gallery</a>
+      <a href="/login">Login</a>
+    </nav>
+  </header>
 
     {{{body}}}
 
