--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -1,7 +1,18 @@
-<h1>Hallo Welt!</h1>
+<section name ></section>
+
+
+<h1>Hallo!</h1>
 
 <p>Willkommen auf meiner Website. Hier wird in Kürze eine interaktive Webapplikation entstehen. Viel Vergnügen!</p>
 
-<img src="construction.gif" width="200">
+
+{{#uploads}}
+  <h2>{{location}}</h2>
+  <p>{{datum}}</p>
+{{/uploads}}
+
+
+
 
 {{> contactform}}
+{{> footer}}
