--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
 
   <header>
     <a href="/">
-      <img src="/public/uploads/logo_hiking_guide_white 1.png" alt="Logo" class="logo" />
+      <img src="/uploads/logo_hiking_guide_white.png" alt="Logo" class="logo" />
     </a>
     <nav>
       <a href="/">Home</a>
