--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -1,10 +1,10 @@
-<section name ></section>
-
-
-<h1>Hallo!</h1>
-
-<p>Willkommen auf meiner Website. Hier wird in Kürze eine interaktive Webapplikation entstehen. Viel Vergnügen!</p>
-
+<section class="hero">
+  <div class="hero-content">
+    <h1>“The mountains are calling and I must go.”</h1>
+    <p>- john muir</p>
+    <a href="/gallery" class="btn">Explore Gallery</a>
+  </div>
+</section>
 
 {{#uploads}}
   <h2>{{location}}</h2>
