--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -2,7 +2,13 @@
   <div class="hero-content">
     <h1>“The mountains are calling and I must go.”</h1>
     <p>- john muir</p>
-    <a href="/gallery" class="btn">Explore Gallery</a>
+  </div>
+</section>
+
+<section class="mission-section">
+  <div class="content">
+    <h3>Our Mission</h3>
+    <p>Wir glauben daran, dass jeder die besten Wanderungen erleben sollte, die die Natur zu bieten hat. Schließe dich uns an und entdecke mehr!</p>
   </div>
 </section>
 
