--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow-x: hidden; /* Verhindert horizontales Scrollen */
+  overflow-x: hidden; /* horizontales Scrollen */
   box-sizing: border-box;
 }
 
@@ -61,7 +61,7 @@ header a {
   text-decoration: none;
   color: #fff;
   font-weight: bold;
-  margin: 0 10px;
+  margin: 0 20px;
 }
 
 header .logo {
@@ -92,8 +92,7 @@ header nav a:hover {
   text-align: center; /* Zentriert die Überschrift */
 }
 
-/* Mission /*
-/* Kleine Section mit weißem Hintergrund */
+/* Mission Section */
 .mission-section {
   width: 100%;
   height: 400px; /* Höhere Section, du kannst den Wert anpassen */
@@ -113,7 +112,7 @@ header nav a:hover {
 }
 
 .mission-section h3 {
-  font-size: 30px; /* Schriftgröße des h3 */
+  font-size: 40px; /* Schriftgröße des h3 */
   color: #b3a07c; /* Farbe des h3 in sanftem Goldbraun */
   margin-bottom: 20px; /* Abstand unter der Überschrift */
 }
