--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,7 @@
     <nav>
       <a href="/">Home</a>
       <a href="/gallery">Gallery</a>
+      <a href="/new_post">Submit Pictures</a>
       <a href="/login">Login</a>
     </nav>
   </header>
