--- a/public/style.css
+++ b/public/style.css
@@ -95,36 +95,47 @@ header nav a:hover {
 /* Mission Section */
 .mission-section {
   width: 100%;
-  height: 400px; /* Höhere Section, du kannst den Wert anpassen */
-  padding: 40px 20px; /* Platz um den Inhalt */
-  background-color: white; /* Weißer Hintergrund */
-  display: flex; /* Flexbox, um Inhalt zu zentrieren */
-  justify-content: center; /* Horizontal zentrieren */
-  align-items: center; /* Vertikal zentrieren */
-  text-align: center; /* Text im Inneren wird zentriert */
+  height: 400px;
+  padding: 40px 20px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   box-sizing: border-box;
 }
 
 /* Inhalt innerhalb der Section */
 .mission-section .content {
-  max-width: 800px; /* Maximale Breite des Inhalts */
-  width: 100%; /* Stellt sicher, dass der Inhalt die volle Breite innerhalb des Containers einnimmt */
+  max-width: 800px;
+  width: 100%;
 }
 
 .mission-section h3 {
-  font-size: 40px; /* Schriftgröße des h3 */
-  color: #b3a07c; /* Farbe des h3 in sanftem Goldbraun */
-  margin-bottom: 20px; /* Abstand unter der Überschrift */
+  font-size: 40px;
+  color: #b3a07c;
+  margin-bottom: 20px;
 }
 
 .mission-section p {
-  font-size: 16px; /* Schriftgröße des Textes */
-  color: #333; /* Dunkle Schriftfarbe */
-  line-height: 1.6; /* Zeilenhöhe für besseren Lesefluss */
-  margin: 0; /* Entfernt unnötige Abstände */
+  font-size: 16px;
+  color: #333;
+  line-height: 1.6;
+  margin: 0;
+}
+
+.gallery-page {
+  background-color: #252a24;
+}
+
+.gallery-hero {
+  padding-top: 60px;
+}
+
+.new-post-page {
+  background-color: #252a24;
 }
 
 .upload {
-  background-color: aqua;
-  height: 400px;
+  padding-top: 100px;
 }
