--- a/views/new_post.handlebars
+++ b/views/new_post.handlebars
@@ -1,9 +1,8 @@
-<h1>Hallo!</h1>
-
+<body class="new-post-page"></body>
 <section class="upload">
   <form action="/gallery" enctype="multipart/form-data" method="post">
+    <input type="text" name="title" />
     <input type="text" name="location" />
-    <input type="text" name="datum" />
     <input type="file" name="image" />
     <input type="submit" />
   </form>
