--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -1,5 +1,9 @@
 <body class="gallery-page">
   <section class="gallery-hero">
+    <h1>YOUR PICTURE GALLERY.</h1>
+  </section>
+
+  <section class="gallery-section">
     {{#uploads}}
       <h1>{{title}}</h1>
       <h2>{{location}}</h2>
