--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -8,12 +8,31 @@
 <section class="mission-section">
   <div class="content">
     <h3>Our Mission</h3>
-    <p>Wir glauben daran, dass jeder die besten Wanderungen erleben sollte, die die Natur zu bieten hat. Schließe dich uns an und entdecke mehr!</p>
+    <p>Wir glauben daran, dass jeder die besten Wanderungen erleben sollte, die die Natur zu bieten hat. Schliesse dich uns an und entdecke mehr!</p>
   </div>
 </section>
 
 <section class="tree">
   <img src="/public/uploads/tree2.jpg" alt="">
+</section>
+
+<section class="join">
+  <div class="image-join">
+      <img src="uploads/tree2.jpg" alt="Forest with fog">
+  </div>
+  <div class="text-join">
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+      <a href="new_post" class="button">
+          join us
+      </a>
+  </div>
+</section>
+
+<section class="gallery-promo">
+  <h2>PICTURES SAY MORE THAN WORDS.</h2>
+  <a href="gallery" class="button">
+    look at your gallery <span>→</span>
+  </a>
 </section>
 
 
