--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,10 +1,8 @@
-Registrierung
-<form action="/register" enctype="multipart/form-data" method="post">
-  Benutzername:
-  <input type="text" name="benutzername" /><br />
-  Passwort:
-  <input type="password" name="password" /><br />
-  Avatar:
-  <input type="text" name="avatar" /><br />
-  <input type="submit" />
+<h2>Registrieren</h2>
+
+<form action="/register" method="POST">
+  Name: <input name="name" type="text" /><br />
+  E-Mail: <input name="username" type="text" /><br />
+  Passwort: <input name="password" type="password" /><br />
+  <input type="submit" value="Registrieren" />
 </form>
