--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,8 +1,15 @@
-<h2>Registrieren</h2>
+<body class="register-seite">
 
-<form action="/register" method="POST">
-  Name: <input name="name" type="text" /><br />
-  E-Mail: <input name="username" type="text" /><br />
-  Passwort: <input name="password" type="password" /><br />
-  <input type="submit" value="Registrieren" />
-</form>
+  <h2>Registrieren</h2>
+
+  <form action="/register" method="POST">
+    Name:
+    <input name="name" type="text" /><br />
+    E-Mail:
+    <input name="username" type="text" /><br />
+    Passwort:
+    <input name="password" type="password" /><br />
+    <input type="submit" value="Registrieren" />
+  </form>
+
+</body>
