--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,15 @@
 <body class="login-seite">
 
-<h2>Login</h2>
+  <h2>Login</h2>
 
-<form action="/login" method="POST">
-    Name: <input name="name" type="text" /><br />
-  E-Mail: <input name="username" type="text" /><br />
-  Passwort: <input name="password" type="password" /><br />
-  <input type="submit" value="Anmelden" />
-</form>
-<a href="/register" class="button">Registrieren</a>
+  <form action="/login" method="POST">
+    Name:
+    <input name="name" type="text" /><br />
+    E-Mail:
+    <input name="username" type="text" /><br />
+    Passwort:
+    <input name="password" type="password" /><br />
+    <input type="submit" value="Anmelden" />
+  </form>
+  <a href="/register" class="button">Registrieren</a>
 </body>
