--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -8,7 +8,7 @@
       <h1>{{title}}</h1>
       <h2>{{location}}</h2>
       <p>{{datum}}</p>
-      <img src="{{image}}" />
+      <img src="{{image.src}}" />
     {{/uploads}}
   </section>
 </body>
